fix #41154: The agents name will cover the shifts if it is too long in Teams

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -67,7 +67,6 @@
 			flex-wrap: wrap;
 			flex-direction: row;
 			justify-content: flex-start;
-			padding-left: 20px;
 		}
 
 		timezone-picker{
@@ -220,6 +219,12 @@
 				padding-right: 5px;
 				padding-left: 5px;
 				min-width: 150px;
+				
+				span.person-name{
+					float: right;
+					word-break: break-word;
+					white-space: normal;
+				}
 			}
 
 			th.right-border-empty, td.right-border-empty {
@@ -326,6 +331,7 @@
 			}
 		
 			td.weekview-person-name{
+				word-break: break-word;
 				padding: 0 5px;
 			}
 		}
